@@ -6,6 +6,8 @@ $Id$
 $HeadURL: https://phpmyadmin.svn.sourceforge.net/svnroot/phpmyadmin/trunk/phpMyAdmin/ChangeLog $
 
 3.1.4.0 (not yet released)
++ patch #1808339 [doc] Apache SSLOptions and StdEnvVars FAQ,
+  thanks to JT Justman - jtjustman
 
 3.1.3.0 (not yet released)
 + [lang] Turkish update, thanks to Burak Yavuz
